--- a/WeightTerminal/Main.resx
+++ b/WeightTerminal/Main.resx
@@ -117,8 +117,92 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="serialPort.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>106, 17</value>
+  </metadata>
+  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <data name="imageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
+        EAAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        AwABGAMAAQEBAAEgBgABJP8A/wD/ADkAAkABPwFsAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8DPQFnSAACQAE/AWwBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wM9AWf/AAkAAVgBVwFU
+        AacBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wFWAVUBVAGkSAABWAFXAVQBpwGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AVYBVQFUAaT/AAkAAWoBZgFdAcwBiwF9AWAB/wMcAScDHgEr
+        AYsBfQFgAf8BaQFlAV0BykgAAWoBZgFdAcwBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wFp
+        AWUBXQHK9AABagFmAV0BzAFmAWMBXQHGAzsBYgMZASIBVwFVAVMBpQGLAX0BYAH/AYsBfQFgAf8DBAQF
+        AQYBiwF9AWAB/wGLAX0BYAH/AVYBVQFTAaIDFgEeAzwBZAFoAWQBXwHIAWgBZQFfAcsgAAFqAWYBXQHM
+        AWYBYwFdAcYDOwFiAxkBIgFXAVUBUwGlAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AVYBVQFTAaIDFgEeAzwBZAFoAWQBXwHIAWgBZQFfAcvcAAM5AV8BiwF9AWAB/wGL
+        AX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BWgFZAVYBrAgAAVsBWgFWAa8BiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8DOQFeGAADOQFfAYsBfQFg
+        Af8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGL
+        AX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8DOQFe1AADCAEKAXkBcQFhAeUBiwF9AWAB/wJIAUcBggFsAWgBYAHPAYsBfQFgAf8BfAF0AWMB7AM0
+        AVMQAAM2AVcBfwF0AWEB7wGLAX0BYAH/AWwBaAFgAc8CSAFHAYIBiwF9AWAB/wF5AXEBYQHlAwgBChAA
+        AwgBCgF7AXEBXwHqAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8BewFxAV8B6gMIAQrQAAFIAkcBgAGLAX0BYAH/AXIBbQFhAd4IAAMz
+        AVEDEwEaAzEBTQFmAWMBXQHGAYEBdQFjAfEBfAF0AWIB7gFlAWIBXAHEAzABSgMTARoDMgFPCAABdAFs
+        AWAB3wGLAX0BYAH/A0cBfxAAAUgCRwGAAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8BZQFjAV0BxQFPAU4BTQGSAVEBTwFOAZUBZQFiAV0BxwGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/A0cBf9AAAy0BRQGA
+        AXgBYQHyAYsBfQFgAf8BWwFaAVUBrQMMARAEAAMwAUsBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8DMAFKBAADDQERAVsBWgFWAa8BiwF9AWAB/wGAAXgBYQHyAy0BRRAA
+        Ay0BRQGAAXgBYQHyAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wMuAUcQAAMw
+        AUoBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYABeAFhAfIDLQFF1AADHgEq
+        AXQBbwFhAeABiwF9AWAB/wFcAVoBVgGwBAABZQFjAV0BxQGLAX0BYAH/AVoBWQFWAasDHQEoAx4BKgFa
+        AVkBVgGrAYsBfQFgAf8BZQFjAV0BxQQAAV4BXAFZAbQBiwF9AWAB/wF0AW8BYQHgAx0BKRgAAx4BKwF0
+        AW8BYQHgAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AWMBYQFbAb8YAAFlAWMBXAHDAYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AXQBbwFhAeADHgEq3AADRAF4AYsBfQFgAf8BTgJNAZEEAAF+AXQBYQHtAYsBfQFg
+        Af8DHgEqCAADHgEqAYsBfQFgAf8BfgF0AWEB7QQAAlABTgGWAYsBfQFgAf8DQwF2IAACRQFEAXoBiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8CTgFMAZAYAAFPAU4BTQGSAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        A0QBd+AAAkUBRAF5AYsBfQFgAf8BTwFOAU0BkgQAAYIBdQFgAfMBiwF9AWAB/wMeASoIAAMeASoBiwF9
+        AWAB/wF+AXQBYQHtBAACUAFOAZYBiwF9AWAB/wNDAXYgAANFAXsBiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8BTgJNAZEYAAFPAU4BTQGSAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/A0QBeNwAAx4BKgF0AW8BYQHg
+        AYsBfQFgAf8BXAFbAVcBsgQAAWUBYwFdAcUBiwF9AWAB/wFaAVkBVgGrAx4BKgMeASoBWgFZAVYBqwGL
+        AX0BYAH/AWUBYwFdAcUEAAFeAVwBWQG0AYsBfQFgAf8BdAFvAWEB4AMdASkYAAMeASsBdAFvAWEB4AGL
+        AX0BYAH/AYsBfQFgAf8BiwF9AWAB/wFoAWQBXwHIGAABaAFlAV8BywGLAX0BYAH/AYsBfQFgAf8BiwF9
+        AWAB/wF0AW8BYQHgAx4BKtQAAy0BRQGAAXkBYwH0AYsBfQFgAf8BWgFZAVYBrAMMARAEAAMwAUsBiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8DMAFKBAADDAEQAVsBWgFV
+        Aa0BiwF9AWAB/wGAAXkBYwH0AywBQxAAAy0BRQGAAXkBYwH0AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wNEAXgQAAJFAUQBeQGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8BgAF5AWMB9AMsAUPQAAFIAkcBgAGLAX0BYAH/AXQBbAFgAd8EAQQAAzMBUgMNAREDMQFN
+        AWUBYwFdAcUBfQF2AV4B8AF9AXYBXgHwAWUBYwFdAcUDMAFKAw0BEQMyAU8IAAF0AW4BYQHiAYsBfQFg
+        Af8DRwF/EAABSAJHAYABiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8BiwF9AWAB/wFqAWQBXgHNAlABTgGUAlABTgGUAWoBZAFeAc0BiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wNHAX/QAAMIAQoBeQFxAWEB5QGLAX0BYAH/
+        AUoBSQFIAYQBbAFoAWABzwGLAX0BYAH/AWwBZwFfAdMDGQEiEAADGgEjAW4BagFfAdUBiwF9AWAB/wFs
+        AWgBYAHPAUoBSQFIAYQBiwF9AWAB/wF5AXEBYQHlAwgBChAAAwgBCgF7AXEBXwHqAYsBfQFgAf8BiwF9
+        AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BeQFx
+        AWEB5QMIAQrUAAM5AV8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYYBgAFj
+        Af4BVAFSAVEBnggAAVUBVAFTAaABhgGAAWMB/gGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8DOQFeGAADOQFfAYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGL
+        AX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFg
+        Af8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8DOQFe3AABagFmAV0BzAFoAWQBXwHIAzwBZAMXAR8BVwFV
+        AVMBpQGLAX0BYAH/AYsBfQFgAf8DBgEHAwYBCAGLAX0BYAH/AYsBfQFgAf8BVgFVAVMBogMWAR4DPAFk
+        AWgBZAFfAcgBaAFlAV8ByyAAAWoBZgFdAcwBaAFkAV8ByAM8AWQDFwEfAVcBVQFTAaUBiwF9AWAB/wGL
+        AX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BVgFVAVMBogMWAR4DPAFkAWgBZAFf
+        AcgBaAFlAV8By/QAAWoBZgFdAcwBiwF9AWAB/wMfASwDIAEtAYsBfQFgAf8BaAFmAV8ByUgAAWoBZgFd
+        AcwBiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wFoAWYBXwHJ/wAJAAFYAVcBVQGmAYsBfQFg
+        Af8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8BVgFVAVQBpEgAAVgBVwFVAaYBiwF9AWAB/wGLAX0BYAH/
+        AYsBfQFgAf8BiwF9AWAB/wFWAVUBVAGk/wAJAAJFAUQBeQGLAX0BYAH/AYsBfQFgAf8BiwF9AWAB/wGL
+        AX0BYAH/A0QBeEgAAkUBRAF5AYsBfQFgAf8BiwF9AWAB/wGLAX0BYAH/AYsBfQFgAf8DRAF4/wD/AP8A
+        5wABQgFNAT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAG/wYABv8GAAH/AYEC/wGB
+        Af8GAAH/AYEC/wGBAf8GAAH/AYEC/wGBAf8GAAHwAQABDwHwAQABDwYAAeABGAEHAeABAAEHBgABwAE8
+        AQMBwAEAAQMGAAHGAQABYwHAAQABAwYAAcEBAAGDAcABPAEDBgAB4QEAAYcB4AF+AQcGAAHxARgBjwHw
+        AX4BDwYAAfEBGAGPAfABfgEPBgAB4QEAAYcB4AF+AQcGAAHBAQABgwHAATwBAwYAAcIBAAFjAcABAAED
+        BgABwAE8AQMBwAEAAQMGAAHgARgBBwHgAQABBwYAAfABAAEPAfABAAEPBgAB/wGBAv8BgQH/BgAB/wGB
+        Av8BgQH/BgAB/wGBAv8BgQH/BgAG/wYABv8GAAs=
+</value>
+  </data>
+  <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
