+ Токвес SH-50. ~ Рефакторинг.

--- a/WeightTerminal/Properties/Resources.resx
+++ b/WeightTerminal/Properties/Resources.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorError" xml:space="preserve">
+    <value>Ошибка:
+{0}</value>
+  </data>
+  <data name="ErrorTerminalPortEmpty" xml:space="preserve">
+    <value>Ошибка:
+Не указан порт, к которому подключен терминал.</value>
+  </data>
+  <data name="ErrorTerminalTypeNone" xml:space="preserve">
+    <value>Ошибка:
+Не указан тип весового терминала.</value>
+  </data>
   <data name="GitHubLink" xml:space="preserve">
     <value>https://github.com/P3tr0viCh/WeightTerminal</value>
   </data>
