--- a/WeightTerminal/Properties/Resources.ScaleTerminal.resx
+++ b/WeightTerminal/Properties/Resources.ScaleTerminal.resx
@@ -123,6 +123,9 @@
   <data name="MassUnit.tn.Description" xml:space="preserve">
     <value>Тонны</value>
   </data>
+  <data name="TerminalType.HbmWe2110.Description" xml:space="preserve">
+    <value>HBM WE2110: HBM стандартный формат</value>
+  </data>
   <data name="TerminalType.MicrosimM0601.Description" xml:space="preserve">
     <value>Микросим М0601</value>
   </data>
