--- a/WeightTerminal/Properties/Resources.resx
+++ b/WeightTerminal/Properties/Resources.resx
@@ -164,6 +164,9 @@
   <data name="GitHubLink" xml:space="preserve">
     <value>https://github.com/P3tr0viCh/WeightTerminal</value>
   </data>
+  <data name="TextError" xml:space="preserve">
+    <value>Ошибка</value>
+  </data>
   <data name="ToolTipKey" xml:space="preserve">
     <value>{0} ({1})</value>
   </data>
